--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="The future value calculator is used to estimate the future value (fv) or value of an investment when certain inputs or parameters such as interest rate, number of periods (n) and present value are provided.">
+  <meta name="description" content="Trinity Finance Terms and Conditions">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -83,7 +83,7 @@
       <ul class="all-list-wrap">
         <li class="linklist"><a class="footerlinks" href="https://trinity1357.github.io/Privacy-Policy">Privacy Policy</a></li>
         <li class="linklist"><a class="footerlinks" href="https://trinity1357.github.io/Terms-and-Conditions/">Terms and Conditions</a></li>
-        <li class="linklist"><a class="footerlinks" href="https://trinity1357.github.io/cookies/">Privacy</a></li>
+        <li class="linklist"><a class="footerlinks" href="https://trinity1357.github.io/cookies/">Cookies</a></li>
       </ul>
     <div class="copyrightdiv">
       © 2021 Copyright:
