--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 <div class="container" id="why-use-cookies-id">
   <h2 class="why-to-use-cookies">Copyright and Ownership</h2>
   <p class="what-to-know-about-cookies">
-    All of the content featured or displayed on the Web Site, including without limitation text, graphics, and illustrations (“Content”), is owned by Trinity Finance. The Web Site may only be used for the intended purpose for which such Web Site is being made available. Except as may be otherwise indicated within the Web Site, you are authorized to view, print, and download documents found on our Web Site for personal, informational, and noncommercial purposes only. You may not modify any of the materials and you may not create derivative works from, transfer or sell any information or work contained on the Web Site. You are responsible for obtaining permission before reusing any material that is available on the Web Site. For purposes of these Terms, the use of any such material on any other web site or networked computer environment should be prohibited. You shall comply with all applicable domestic and international laws, statutes, ordinances, and regulations regarding your use of the Web Site. The Web Site, its Content, and all related rights shall remain the exclusive property of Trinity Finance or its licensors unless otherwise expressly agreed.
+        All of the content featured or displayed on the Web Site, including without limitation text, graphics, and illustrations (“Content”), is in a way owned by Trinity Finance. The Web Site may only be used for the intended purpose for which such Web Site is being made available. Except as may be otherwise indicated within the Web Site, you are authorized to view, print, and download documents found on our Web Site for personal, informational purposes only. You should not create derivative works from, transfer or sell any information or work contained on the Web Site. You are responsible for obtaining permission before reusing any material that is available on the Web Site. For purposes of these Terms, the use of any such material on any other web site or networked computer environment should be prohibited. You shall comply with all applicable domestic and international laws, statutes, ordinances, and regulations regarding your use of the Web Site. The Web Site, its Content, and all related rights shall remain the exclusive property of Trinity Finance unless otherwise expressly agreed.
   </p>
 </div>
 <!-- what type of cookies are used? -->
 <div class="container" id="what-are-cookies-id">
   <h2 class="why-to-use-cookies">Information Accuracy</h2>
   <p class="what-to-know-about-cookies">
-    We attempt to ensure that information on this Web Site is complete, accurate, and current. Despite our efforts, the information on this Web Site may occasionally be inaccurate, incomplete, or out of date. We may make changes in information about availability without notice.
+    We attempt to ensure that information on this Web Site is complete, accurate, and current. Despite our efforts, the information on this Web Site may occasionally be inaccurate, incomplete, or out of date. We may make changes in information about availability without prior notice.
   </p>
 </div>
 <!-- don't want cookies ? -->
